--- a/View/MainPageAdmin.xaml
+++ b/View/MainPageAdmin.xaml
@@ -61,6 +61,8 @@
         <Button Name="AddButton" Content="Добавить товар" FontSize="14px" Margin="25px 20px 25px 20px" Command="{Binding ToAddPageCommand}" Grid.Row="3" Grid.Column="4" Grid.ColumnSpan="2"/>
         <Button Name="DeleteButton" Content="Выдать заказ" FontSize="14px" Margin="25px 20px 25px 20px" Command="{Binding ToGivePageCommand}" Grid.Row="4" Grid.Column="4" Grid.ColumnSpan="2"/>
 
+        <TextBlock FontSize="14px" Margin="25px 35px 15px 5px" Grid.Column="4" Grid.ColumnSpan="2" Grid.Row="2" TextAlignment="Left" Text="{Binding OrdersCount}"/>
+
         <StackPanel Grid.ColumnSpan="2" Grid.Column="4" Grid.Row="1">
             <TextBlock FontSize="14px" Margin="25px 35px 15px 5px" TextAlignment="Center" Text="Пункт выдачи:"/>
             <ComboBox Margin="15px 0px 15px 5px">
