--- a/View/MainPage.xaml
+++ b/View/MainPage.xaml
@@ -35,9 +35,9 @@
         <Border Grid.Row ="0" Grid.Column="0" Grid.ColumnSpan="6" BorderThickness="3px" BorderBrush="#4B0082" Margin="110px 2px 5px 2px" Background="#ca9aec"/>
         <Border Grid.Row ="6" Grid.ColumnSpan="6" Grid.RowSpan="2" BorderThickness="3px" BorderBrush="#4B0082" Margin="2px 2px 2px 2px" Background="#ca9aec"/>
         <Border Grid.Row ="1" Grid.Column="0" Grid.ColumnSpan="4" Grid.RowSpan="5" BorderThickness="3px" BorderBrush="#4B0082" Margin="2px 2px 2px 2px" Background="#ca9aec"/>
-        <Border Grid.Row ="1" Grid.Column="4" Grid.ColumnSpan="2" Grid.RowSpan="5" BorderThickness="3px" BorderBrush="#4B0082" Margin="2px 25px 2px 75px" Background="#ca9aec"/>
+        <Border Grid.Row ="1" Grid.Column="4" Grid.ColumnSpan="2" Grid.RowSpan="5" BorderThickness="3px" BorderBrush="#4B0082" Margin="2px 2px 2px 2px" Background="#ca9aec"/>
 
-        <!--Поле поиска медикаментов-->
+        <!--Поле поиска-->
         <StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Margin="110px 5px 0px 0px" VerticalAlignment="Center">
             <Label Grid.Column="0" Grid.Row="0" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center">Поиск</Label>
             <TextBox Margin="15px 0px 15px 0px" Text="{Binding TextSearchProduct, UpdateSourceTrigger=PropertyChanged}"></TextBox>
@@ -60,7 +60,8 @@
 
         <!--Кнопки списка-->
         <Button Name="AddButton" Content="Добавить товар" FontSize="14px" Margin="25px 20px 25px 20px" Command="{Binding ToAddPageCommand}" Grid.Row="3" Grid.Column="4" Grid.ColumnSpan="2"/>
-        <Button Name="DeleteButton" Content="Выдать заказ" FontSize="14px" Margin="25px 20px 25px 20px" Command="{Binding ToGivePageCommand}" Grid.Row="4" Grid.Column="4" Grid.ColumnSpan="2"/>
+        <Button Name="GiveButton" Content="Выдать заказ" FontSize="14px" Margin="25px 20px 25px 20px" Command="{Binding ToGivePageCommand}" Grid.Row="4" Grid.Column="4" Grid.ColumnSpan="2"/>
+        <Button Name="StatButton" Content="Перейти к статистике" FontSize="14px" Margin="25px 20px 25px 20px" Command="{Binding ToStatPageCommand}" Grid.Row="5" Grid.Column="4" Grid.ColumnSpan="2"/>
 
         <TextBlock FontSize="14px" Margin="25px 35px 15px 5px" Grid.Column="4" Grid.ColumnSpan="2" Grid.Row="2" TextAlignment="Left" Text="{Binding OrdersCount}"/>
 
@@ -83,7 +84,7 @@
 
         <Grid Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="6">
             <TextBlock FontSize="14px" Margin="15px 25px 15px 0px" Text="Фильтры:"/>
-            <Expander Header="Цена"  Margin="95px,18px,530px,5px" FontSize="14px" Width="275px" Height="60px">
+            <Expander Header="Цена"  Margin="95,16,530,7" FontSize="14px" Width="275px" Height="60px">
                 <Grid Grid.Column="2" Grid.Row="3">
                     <TextBlock Text="От:"/>
                     <TextBox Margin="0px 0px 140px 15px" Height="25px" Width="80px" Text="{Binding MinPrice}"/>
